--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 server.port=8081
-spring.thymeleaf.cache = false
 spring.h2.console.enabled = true
-spring.datasource.url = jdbc:h2:mem:demob
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=secret
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.url = jdbc:h2:mem:demob
+spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=secret
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/demodb
+spring.datasource.username=martin
+spring.datasource.password=274981
